--- a/ipython33/Dockerfile
+++ b/ipython33/Dockerfile
@@ -1,9 +1,13 @@
-FROM centos
+FROM centos:6.4
+
+MAINTAINER Lars Solberg <lars.solberg@gmail.com>
 
 RUN yum install -y centos-release-SCL
 RUN yum install -y python33
 RUN scl enable python33 'easy_install pip'
-RUN scl enable python33 'pip install ipython'
+
+ADD requirements.txt /requirements.txt
+RUN scl enable python33 'pip install -r /requirements.txt'
 
 CMD ["scl", "enable", "python33", "ipython"]
 
