Adding startup text
And the start file

--- a/devbox/Dockerfile
+++ b/devbox/Dockerfile
@@ -30,4 +30,8 @@ RUN cd /setup && \
 VOLUME /data
 WORKDIR /data
 
+ADD start /start
+RUN chmod +x /start
+ENTRYPOINT ["/start"]
 CMD ["bash", "-l"]
+
