Renaming run (it will conflict with /run on centos7), and fixed it to run CMD with paramters as well

--- a/centos-template-big/Dockerfile
+++ b/centos-template-big/Dockerfile
@@ -27,7 +27,7 @@ RUN sed -i \
 
 ADD run /run
 RUN chmod 755 /run
-ENTRYPOINT ["/bin/bash", "-e", "/run"]
+ENTRYPOINT ["/bin/bash", "-e", "/start"]
 CMD ["start"]
 
 EXPOSE 22
