--- a/devbox/Dockerfile
+++ b/devbox/Dockerfile
@@ -1,6 +1,7 @@
 FROM centos:centos7
 
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
+ENV REFRESHED_AT 2014-08-10
 
 RUN yum localinstall -y http://dl.fedoraproject.org/pub/epel/beta/7/x86_64/epel-release-7-0.2.noarch.rpm
 
