Fix for when you are using ssl in front

--- a/wwwhisper/nginx.conf
+++ b/wwwhisper/nginx.conf
@@ -14,6 +14,7 @@ http {
         error_log /var/log/nginx.log debug;
         set $wwwhisper_root /wwwhisper/;
         set $wwwhisper_site_socket unix:__SITE_PATH__/uwsgi.sock;
+        set $external_scheme $http_x_forwarded_proto;
         include /wwwhisper/nginx/wwwhisper.conf;
         include /sites.conf;
 
