Adding spdy support

--- a/nginx-proxy-multi/nginx-proxy-forwarder/Dockerfile
+++ b/nginx-proxy-multi/nginx-proxy-forwarder/Dockerfile
@@ -14,7 +14,7 @@ RUN yum install -y --enablerepo=centosplus tar git make gcc pcre-devel openssl-d
 RUN wget http://nginx.org/download/nginx-${NGINX_VERSION}.tar.gz && \
     tar -zxvf nginx-${NGINX_VERSION}.tar.gz && \
     cd nginx-${NGINX_VERSION} && \
-    ./configure --with-http_ssl_module --with-http_sub_module --user=www-data --group=www-data --prefix=/usr/local/nginx/ --sbin-path=/usr/local/sbin && \
+    ./configure --with-http_ssl_module --with-http_sub_module --with-http_spdy_module --user=www-data --group=www-data --prefix=/usr/local/nginx/ --sbin-path=/usr/local/sbin && \
     make && make install && touch /usr/local/nginx/conf/generated.conf
 ADD nginx.conf /usr/local/nginx/conf/nginx.conf
 RUN adduser --system www-data
