--- a/wwwhisper/Dockerfile
+++ b/wwwhisper/Dockerfile
@@ -17,6 +17,9 @@ RUN wget http://nginx.org/download/nginx-${NGINX_VERSION}.tar.gz && \
     ./configure --add-module=./ngx_http_auth_request_module/ --with-http_ssl_module --with-http_sub_module --user=www-data --group=www-data --prefix=/usr/local/nginx/ --sbin-path=/usr/local/sbin && \
     make && make install
 
+RUN wget https://github.com/jwilder/docker-gen/releases/download/0.3.2/docker-gen-linux-amd64-0.3.2.tar.gz && \
+    tar xvzf docker-gen-linux-amd64-0.3.2.tar.gz
+ADD sites.tmpl /
 
 RUN adduser --system www-data && adduser --system -G www-data wwwhisper
 RUN cd / && git clone https://github.com/wrr/wwwhisper.git && cd wwwhisper && virtualenv virtualenv && source virtualenv/bin/activate && pip install -r requirements.txt
