--- a/wwwhisper/supervisord.conf
+++ b/wwwhisper/supervisord.conf
@@ -19,3 +19,6 @@ serverurl=unix:///var/tmp/supervisor.sock
 
 [include]
 files = /wwwhisper/sites/*/supervisor/site.conf /wwwhisper/nginx/supervisor.conf
+
+## TODO
+##start program = "/docker-gen -watch -only-exposed -notify 'nginx -s reload' /sites.tmpl /sites.conf"
