More changes to new design.

--- a/wwwhisper/supervisord.conf
+++ b/wwwhisper/supervisord.conf
@@ -20,5 +20,8 @@ serverurl=unix:///var/tmp/supervisor.sock
 [include]
 files = /wwwhisper/sites/*/supervisor/site.conf /wwwhisper/nginx/supervisor.conf
 
-## TODO
-##start program = "/docker-gen -watch -only-exposed -notify 'nginx -s reload' /sites.tmpl /sites.conf"
+[program:dockergen]
+command=/docker-gen -config /docker-gen.conf
+autorestart=true
+stopwaitsecs=2
+stopasgroup=true
