--- a/wwwhisper/docker-gen.conf
+++ b/wwwhisper/docker-gen.conf
@@ -10,3 +10,4 @@ template = "/index.tmpl"
 dest = "/usr/local/nginx/html/index.html"
 onlyexposed = true
 watch = true
+notifycmd = "chmod 444 /usr/local/nginx/html/index.html"
