--- a/wetty/Dockerfile
+++ b/wetty/Dockerfile
@@ -2,7 +2,7 @@ FROM centos:centos7
 
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
 
-RUN yum localinstall -y http://dl.fedoraproject.org/pub/epel/beta/7/x86_64/epel-release-7-0.2.noarch.rpm
+RUN yum localinstall -y http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-2.noarch.rpm
 RUN yum install -y git tar gcc-c++ nodejs make emacs-nox tmux
 RUN curl https://www.npmjs.org/install.sh | clean=no sh
 RUN git clone https://github.com/nathanleclaire/wetty.git && \
