Using onbuild for supervisor.d configs

--- a/centos-base/Dockerfile
+++ b/centos-base/Dockerfile
@@ -6,7 +6,7 @@ ENV REFRESHED_AT 2014-10-02
 RUN yum localinstall -y http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-2.noarch.rpm && \
     yum install -y supervisor && \
     yum clean all
-COPY supervisord.d /etc/
+ONBUILD COPY supervisord.d /etc/
 
 COPY start /
 RUN chmod 755 /start
