--- a/base-centos/Dockerfile
+++ b/base-centos/Dockerfile
@@ -4,11 +4,11 @@ MAINTAINER Lars Solberg <lars.solberg@gmail.com>
 ENV REFRESHED_AT 2014-10-02
 
 RUN yum localinstall -y http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-2.noarch.rpm && \
-    yum install -y supervisor && \
     yum clean all
-ONBUILD COPY supervisord.d /etc/
 
-COPY start /
-RUN chmod 755 /start
-ENTRYPOINT ["/bin/bash", "-e", "/start"]
-CMD ["start"]
+COPY dinit/ /dinit/
+ENTRYPOINT ["/bin/bash", "-e", "/dinit/start"]
+CMD ["run"]
+
+# Continue to copy this, as controll files will be in it
+ONBUILD COPY dinit/ /dinit/
