--- a/base-centos-daemon/Dockerfile
+++ b/base-centos-daemon/Dockerfile
@@ -4,6 +4,6 @@ MAINTAINER Lars Solberg <lars.solberg@gmail.com>
 ENV REFRESHED_AT 2014-10-02
 
 RUN yum install -y supervisor && yum clean all
-ONBUILD COPY supervisord.d/ /etc/supervisor.d/
+ONBUILD COPY supervisord.d/ /etc/supervisord.d/
 
 COPY dinit/ /dinit/
