Updated to centos7, and new base-centos-daemon image

--- a/ns/dnsmasq.conf
+++ b/ns/dnsmasq.conf
@@ -1,6 +1,9 @@
 # Must be there to work with docker
 user=root
 
+domain-needed
+bogus-priv
+no-hosts
 expand-hosts
 
 # This directory is watched, dnsmasq is reloaded every time there is a change in it
