--- a/ns/Dockerfile
+++ b/ns/Dockerfile
@@ -1,14 +1,9 @@
-FROM centos:centos6
+FROM xeor/base-centos-daemon
 
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
-ENV REFRESHED_AT 2014-08-25
+ENV REFRESHED_AT 2014-10-03
 
-RUN yum install -y https://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
-RUN yum install -y dnsmasq inotify-tools
+# inotify-tools isnt in epel stable yet... (2014-10-03)
+RUN yum install -y --enablerepo=epel-testing dnsmasq inotify-tools
 
 ADD dnsmasq.conf /etc/dnsmasq.conf
-
-ADD start /start
-RUN chmod 755 /start
-ENTRYPOINT ["/bin/bash", "-e", "/start"]
-CMD ["start"]
