--- a/base-centos-daemon/Dockerfile
+++ b/base-centos-daemon/Dockerfile
@@ -6,4 +6,4 @@ ENV REFRESHED_AT 2014-10-02
 RUN yum install -y supervisor && yum clean all
 ONBUILD COPY supervisord.d/ /etc/supervisord.d/
 
-COPY dinit/ /dinit/
+COPY init/ /init/
