Renaming dinit to init

--- a/base-centos/Dockerfile
+++ b/base-centos/Dockerfile
@@ -6,9 +6,9 @@ ENV REFRESHED_AT 2014-10-02
 RUN yum localinstall -y http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-2.noarch.rpm && \
     yum clean all
 
-COPY dinit/ /dinit/
-ENTRYPOINT ["/bin/bash", "-e", "/dinit/start"]
+COPY init/ /init/
+ENTRYPOINT ["/bin/bash", "-e", "/init/start"]
 CMD ["run"]
 
 # Continue to copy this, as controll files will be in it
-ONBUILD COPY dinit/ /dinit/
+ONBUILD COPY init/ /init/
