--- a/wwwhisper/supervisord.conf
+++ b/wwwhisper/supervisord.conf
@@ -1,6 +1,5 @@
 [unix_http_server]
 file=/var/tmp/supervisor.sock
-
 [supervisord]
 logfile=/var/log/supervisord.log
 logfile_maxbytes=50MB
@@ -18,10 +17,4 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///var/tmp/supervisor.sock
 
 [include]
-files = /wwwhisper/sites/*/supervisor/site.conf /wwwhisper/nginx/supervisor.conf
-
-[program:dockergen]
-command=/docker-gen -config /docker-gen.conf
-autorestart=true
-stopwaitsecs=2
-stopasgroup=true
+files = /etc/supervisord.d/*.ini /wwwhisper/sites/*/supervisor/site.conf /wwwhisper/nginx/supervisor.conf
