--- a/wwwhisper/docker-gen.conf
+++ b/wwwhisper/docker-gen.conf
@@ -1,11 +1,13 @@
 [[config]]
 template = "/sites.tmpl"
 dest = "/sites.conf"
+onlyexposed = true
 watch = true
 notifycmd = "pkill -HUP nginx"
 
 [[config]]
 template = "/index.tmpl"
 dest = "/usr/local/nginx/html/index.html"
+onlyexposed = true
 watch = true
 notifycmd = "chmod 444 /usr/local/nginx/html/index.html"
