--- a/sickbeard/Dockerfile
+++ b/sickbeard/Dockerfile
@@ -5,4 +5,4 @@ ENV REFRESHED_AT 2014-10-11
 
 RUN yum install -y tar python-cheetah && \
     curl -L https://github.com/midgetspy/Sick-Beard/tarball/master > sickbeard.tgz && \
-    mv midgetspy-Sick-Beard* /sickbeard
+    tar -zxvf sickbeard.tgz && mv midgetspy-Sick-Beard* /sickbeard
