--- a/pydio/nginx.conf
+++ b/pydio/nginx.conf
@@ -1,3 +1,4 @@
+
 upstream nginx_backend {
     server 127.0.0.1:9000;
 }
@@ -5,16 +6,38 @@ upstream nginx_backend {
 server {
     listen       8080;
     server_name  _;
+    root /pydio;
+    index index.php;
+    client_max_body_size 5120M;
+    add_header X-Frame-Options "SAMEORIGIN";
+
+    location ~* ^/(?:\.|conf|data/(?:files|personal|logs|plugins|tmp|cache)|plugins/editor.zoho/agent/files) {
+        deny all;
+    }
+    location ~* /data/public/.*.(ser|htaccess)$ {
+        deny all;
+    }
+    location ~* ^/(favicon.ico|robots.txt) {
+        log_not_found off;
+    }
+    location /shares {
+        if (!-f $request_filename) {
+            rewrite ^/shares /dav.php last;
+            break;
+        }
+        if (!-d $request_filename) {
+            rewrite ^/shares /dav.php last;
+            break;
+        }
+    }
 
     location ~* \.(html|jpg|jpeg|gif|png|css|js|ico|xml|svg|swf|woff)$ {
-        root              /pydio;
         access_log        off;
         log_not_found     off;
         expires           360d;
     }
 
     location ~* \.php$ {
-        root /pydio;
         include fastcgi.conf;
         fastcgi_pass nginx_backend;
     }
