--- a/splogger/Dockerfile
+++ b/splogger/Dockerfile
@@ -5,7 +5,7 @@ ENV REFRESHED_AT 2014-10-27
 
 ENV DEPENDING_ENVIRONMENT_VARS SPLUNK_HOST SPLUNK_PORT
 
-RUN yum install -y tar && \
+RUN yum install -y tar make && \
     curl -L https://github.com/jwilder/docker-gen/releases/download/0.3.4/docker-gen-linux-amd64-0.3.4.tar.gz > docker-gen.tgz && \ 
     tar -xvzf docker-gen.tgz && \
     yum clean all
@@ -15,7 +15,5 @@ RUN yum install -y rubygems ruby-devel gcc && \
     yum clean all
 
 ADD fluentd.tmpl /
-
-CMD ['/docker-gen', '-watch', '-notify', '"pkill -HUP fluentd"', '/fluentd.tmpl', '/etc/fluent/fluent.conf']
 
 ENV DOCKER_HOST unix:///var/run/docker.sock
