Finishing up container

--- a/nrk-sb-ripd/Dockerfile
+++ b/nrk-sb-ripd/Dockerfile
@@ -3,6 +3,8 @@ FROM xeor/base-centos
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
 ENV REFRESHED_AT 2014-10-25
 
+ENV DEPENDING_ENVIRONMENT_VARS SICKBEARD_URL SICKBEARD_API_KEY
+
 # Force python3's stdin/stdout encoding to be utf-8, instead of guessing..
 ENV PYTHONIOENCODING utf-8
 
@@ -13,5 +15,3 @@ RUN yum localinstall -y https://www.softwarecollections.org/en/scls/rhscl/python
     scl enable python33 'pip install ipython requests beautifulsoup4'
 
 ADD worker /
-
-CMD ["/usr/bin/scl", "enable", "python33", "'python /worker'"]
