Changed out ONBUILD COPY from base-cantos to being manually done on each childs instead. Done this so we can use Dockers caching when editing init/ files..

--- a/base-centos-daemon/Dockerfile
+++ b/base-centos-daemon/Dockerfile
@@ -4,6 +4,5 @@ MAINTAINER Lars Solberg <lars.solberg@gmail.com>
 ENV REFRESHED_AT 2014-10-02
 
 RUN yum install -y supervisor && yum clean all
-ONBUILD COPY supervisord.d/ /etc/supervisord.d/
 
-ONBUILD COPY init/ /init/
+COPY init/ /init/
