--- a/ns/Dockerfile
+++ b/ns/Dockerfile
@@ -6,4 +6,6 @@ ENV REFRESHED_AT 2014-10-03
 # inotify-tools isnt in epel stable yet... (2014-10-03)
 RUN yum install -y --enablerepo=epel-testing dnsmasq inotify-tools
 
+COPY supervisord.d/ /etc/supervisord.d/
+
 ADD dnsmasq.conf /etc/dnsmasq.conf
