--- a/sickbeard-nrk-helper/Dockerfile
+++ b/sickbeard-nrk-helper/Dockerfile
@@ -14,4 +14,5 @@ RUN yum localinstall -y https://www.softwarecollections.org/en/scls/rhscl/python
     scl enable python33 'easy_install pip' && \
     scl enable python33 'pip install ipython requests beautifulsoup4'
 
+COPY init/ /init/
 ADD worker.py /
