--- a/couchpotato/Dockerfile
+++ b/couchpotato/Dockerfile
@@ -5,3 +5,6 @@ ENV REFRESHED_AT 2014-10-25
 
 RUN yum install -y git && \
     git clone https://github.com/RuudBurger/CouchPotatoServer.git
+
+COPY init/ /init/
+COPY supervisord.d/ /etc/supervisord.d/
