--- a/sickbeard/Dockerfile
+++ b/sickbeard/Dockerfile
@@ -6,3 +6,6 @@ ENV REFRESHED_AT 2014-10-11
 RUN yum install -y tar python-cheetah && \
     curl -L https://github.com/midgetspy/Sick-Beard/tarball/master > sickbeard.tgz && \
     tar -zxvf sickbeard.tgz && mv midgetspy-Sick-Beard* /sickbeard
+
+COPY init/ /init/
+COPY supervisord.d/ /etc/supervisord.d/
