Started using pip's version of supervisord instead of epel. pip is newer, and supports stuff like killasgroup

--- a/base-centos-daemon/Dockerfile
+++ b/base-centos-daemon/Dockerfile
@@ -1,8 +1,9 @@
 FROM xeor/base-centos
 
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
-ENV REFRESHED_AT 2014-10-02
+ENV REFRESHED_AT 2014-12-15
 
-RUN yum install -y supervisor && yum clean all
+RUN yum install -y python-pip && yum clean all && \
+    pip install supervisor
 
 COPY init/ /init/
