--- a/git-stats/Dockerfile
+++ b/git-stats/Dockerfile
@@ -1,16 +1,17 @@
 FROM xeor/base-centos-daemon
 
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
-ENV REFRESHED_AT 2014-12-23
+ENV REFRESHED_AT 2015-01-08
 
-RUN yum install -y nginx git rubygems ruby-devel gcc tar patch libxml2-devel make
+RUN yum install -y nginx git rubygems ruby-devel gcc tar patch libxml2-devel make && \
+    gem install git_stats 
 
 COPY generatord.sh /
-RUN gem install git_stats && chmod +x /generatord.sh
-
 COPY nginx.conf /etc/nginx/conf.d/git-stats.conf
 COPY init/ /init/
 COPY supervisord.d/ /etc/supervisord.d/
+
+RUN chmod +x /generatord.sh
 
 VOLUME ["/data"]
 EXPOSE 8080
