Misc to make it work.. :)

--- a/sentry/supervisord.d/sentry-web.ini
+++ b/sentry/supervisord.d/sentry-web.ini
@@ -1,6 +1,6 @@
 [program:sentry-web]
-directory=/.../
-command=/.../sentry start
+directory=/data/
+command=/usr/bin/sentry --config=/data/sentry.conf.py start
 autostart=true
 autorestart=true
 redirect_stderr=true
