--- a/nginx-proxy-front/fig.yml
+++ b/nginx-proxy-front/fig.yml
@@ -1,7 +1,7 @@
 nginxfront:
   image: xeor/nginx-proxy-front
   volumes:
-    domains:/domains
+    - domains:/domains
   ports:
     - "80:80"
     - "443:443"
