A lot of changes to make it work.. See README.md

--- a/wetty/Dockerfile
+++ b/wetty/Dockerfile
@@ -1,21 +1,18 @@
-FROM centos:centos7
+FROM xeor/base-centos-daemon
 
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
+ENV REFRESHED_AT 2015-02-26
 
-RUN yum localinstall -y http://dl.fedoraproject.org/pub/epel/7/x86_64/e/epel-release-7-2.noarch.rpm
 RUN yum install -y git tar gcc-c++ nodejs make emacs-nox tmux
-RUN curl https://www.npmjs.org/install.sh | clean=no sh
+RUN curl https://www.npmjs.com/install.sh | clean=no sh
 RUN git clone https://github.com/nathanleclaire/wetty.git && \
     cd wetty && \
     npm install
 
-RUN useradd -d /home/term -m -s /bin/bash term
-RUN echo 'term:term' | chpasswd
+RUN sed 's@/bin/login@/bin/bash@' -i /wetty/app.js
 
-# Fix for https://bugzilla.redhat.com/show_bug.cgi?id=966807 (also happens on debian)
-RUN sed -e '/^session[ ]*required[ ]*pam_loginuid\.so$/s/^/#/g' -i /etc/pam.d/login
+COPY init/ /init/
+COPY supervisord.d/ /etc/supervisord.d/
 
 EXPOSE 3000
 
-WORKDIR /wetty
-CMD ["node", "app.js", "-p", "3000"]
