--- a/wetty/Dockerfile
+++ b/wetty/Dockerfile
@@ -3,6 +3,8 @@ FROM xeor/base-centos-daemon
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
 ENV REFRESHED_AT 2015-02-26
 
+ENV TERM xterm-256color
+
 RUN yum install -y git tar gcc-c++ nodejs make emacs-nox tmux
 RUN curl https://www.npmjs.com/install.sh | clean=no sh
 RUN git clone https://github.com/nathanleclaire/wetty.git && \
