--- a/wwwhisper/Dockerfile
+++ b/wwwhisper/Dockerfile
@@ -2,10 +2,11 @@ FROM xeor/base-centos-daemon
 
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
 ENV DEPENDING_ENVIRONMENT_VARS SITE_URL ADMIN_MAIL
-ENV REFRESHED_AT 2014-10-19
-ENV NGINX_VERSION 1.6.2
+ENV REFRESHED_AT 2015-09-27
+ENV NGINX_VERSION 1.6.3
 
-RUN yum install -y tar git make gcc pcre-devel openssl-devel python-setuptools python-devel wget && \
+RUN yum update -y && \
+    yum install -y tar git make gcc pcre-devel openssl-devel python-setuptools python-devel uwsgi-plugin-python wget && \
     easy_install pip && \
     pip install supervisor virtualenv
 
@@ -17,8 +18,8 @@ RUN wget http://nginx.org/download/nginx-${NGINX_VERSION}.tar.gz && \
     ./configure --add-module=./ngx_http_auth_request_module/ --with-http_ssl_module --with-http_sub_module --user=www-data --group=www-data --prefix=/usr/local/nginx/ --sbin-path=/usr/local/sbin && \
     make && make install
 
-RUN wget https://github.com/jwilder/docker-gen/releases/download/0.3.4/docker-gen-linux-amd64-0.3.4.tar.gz && \
-    tar xvzf docker-gen-linux-amd64-0.3.4.tar.gz
+RUN wget https://github.com/jwilder/docker-gen/releases/download/0.4.1/docker-gen-linux-amd64-0.4.1.tar.gz && \
+    tar xvzf docker-gen-linux-amd64-0.4.1.tar.gz
 
 RUN adduser --system www-data && adduser --system -G www-data wwwhisper
 RUN cd / && git clone https://github.com/wrr/wwwhisper.git && cd wwwhisper && virtualenv virtualenv && source virtualenv/bin/activate && pip install -r requirements.txt
