map directive only allowed in html now

--- a/wwwhisper/nginx.conf
+++ b/wwwhisper/nginx.conf
@@ -8,6 +8,12 @@ http {
     default_type  application/octet-stream;
     sendfile        on;
     keepalive_timeout  65;
+
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
     server {
         listen       80;
         server_name  _;
