Adding a new WEBFEWD runner..

--- a/docker-acter/Dockerfile
+++ b/docker-acter/Dockerfile
@@ -5,6 +5,11 @@ ENV REFRESHED_AT 2015-08-15
 
 RUN yum install -y python-pip && pip install docker-py
 
+# Install nginx and change default port to 8888
+# nginx is used by some runners
+RUN yum update -y && yum install -y nginx && \
+    sed -e 's/\(.*listen.*\)80\(.*\)/\18888\2/g' -i /etc/nginx/nginx.conf
+
 COPY worker.py /
 RUN chmod +x /worker.py
 
