Replacing the default nginx.conf
Because the default one makes a site go randomly between the default (welcome-page), and the one it should go to..

--- a/docker-acter/Dockerfile
+++ b/docker-acter/Dockerfile
@@ -16,4 +16,6 @@ RUN chmod +x /worker.py
 COPY runners/ /runners
 RUN chmod +x /runners/*
 
+COPY nginx.conf /etc/nginx/nginx.conf
+
 CMD ["/worker.py"]
