--- a/webproxy/Dockerfile
+++ b/webproxy/Dockerfile
@@ -1,13 +1,13 @@
 FROM xeor/base-centos-daemon
 
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
-ENV REFRESHED_AT 2014-10-06
-ENV NGINX_VERSION 1.6.2
+ENV REFRESHED_AT 2015-10-04
+ENV NGINX_VERSION 1.6.3
 
-RUN yum install -y nginx wget tar python-setuptools && easy_install pip && pip install supervisor
+RUN yum upgrade -y && yum install -y nginx wget tar python-setuptools && easy_install pip && pip install supervisor
 
-RUN wget https://github.com/jwilder/docker-gen/releases/download/0.3.2/docker-gen-linux-amd64-0.3.2.tar.gz && \
-    tar xvzf docker-gen-linux-amd64-0.3.2.tar.gz
+RUN wget https://github.com/jwilder/docker-gen/releases/download/0.4.1/docker-gen-linux-amd64-0.4.1.tar.gz && \
+    tar xvzf docker-gen-linux-amd64-0.4.1.tar.gz
 
 ADD sites.tmpl /
 ADD docker-gen.conf /
