--- a/crashplan/Dockerfile
+++ b/crashplan/Dockerfile
@@ -1,11 +1,11 @@
 FROM xeor/base-centos
 
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
-ENV REFRESHED_AT 2015-05-13
+ENV REFRESHED_AT 2015-10-07
 
 # Crashplan itself (at least as much as we can. It generates some ID's at install)
-RUN yum install -y tar && curl -L http://download.code42.com/installs/linux/install/CrashPlan/CrashPlan_4.3.0_Linux.tgz | tar -zx && \
-    cd /CrashPlan-install && \
+RUN yum upgrade -y && yum install -y tar && curl -L https://download2.code42.com/installs/linux/install/CrashPlan/CrashPlan_4.4.1_Linux.tgz | tar -zx && \
+    cd /crashplan-install && \
     sed -i 's/^more /: /g' install.sh && \
     (echo; echo; echo yes; echo ; echo y; echo; echo /backups; echo y; echo; echo; echo y; echo) | ./install.sh && \
     sleep 10 && \
