Dont send anyone anywhere as default

--- a/docker-acter/nginx.conf
+++ b/docker-acter/nginx.conf
@@ -17,5 +17,13 @@ http {
     types_hash_max_size 2048;
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
+
+    # Dont send anyone anywhere as default
+    server {
+      server_name default_server "";
+      listen 8888;
+      return 444;
+    }
+
     include /etc/nginx/conf.d/*.conf;
 }
