--- a/buildbot/Dockerfile
+++ b/buildbot/Dockerfile
@@ -1,4 +1,4 @@
-FROM xeor/base-centos-daemon
+FROM xeor/base:7.1-2
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
 ENV REFRESHED_AT 2015-10-03
 
@@ -8,6 +8,8 @@ ENV TZ=Europe/Oslo
 
 COPY supervisord.d/ /etc/supervisord.d/
 COPY init/ /init/
+COPY hooks/ /hooks/
+RUN chmod +x /hooks/*
 
 RUN pip install --upgrade pip && \
     yum install -y gcc python-devel git docker && \
