--- a/etherpad/Dockerfile
+++ b/etherpad/Dockerfile
@@ -1,7 +1,7 @@
-FROM xeor/base-centos-daemon
+FROM xeor/base:7.1-3
 
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
-ENV REFRESHED_AT 2014-10-06
+ENV REFRESHED_AT 2015-11-21
 ENV DEPENDING_ENVIRONMENT_VARS POSTGRESQL_PORT
 
 # FIXME: Abiword package not currently in http://li.nux.ro/download/nux/dextop/el7/x86_64/ (2014-10-06)
