--- a/nginx-proxy-front/Dockerfile
+++ b/nginx-proxy-front/Dockerfile
@@ -1,11 +1,12 @@
-FROM xeor/base-centos-daemon
+FROM xeor/base:7.2-1
 
 MAINTAINER Lars Solberg <lars.solberg@gmail.com>
-ENV REFRESHED_AT 2015-09-26
+ENV REFRESHED_AT 2016-01-01
 
-RUN yum upgrade -y && yum install -y nginx inotify-tools
+RUN yum upgrade -y && yum install -y nginx git && yum clean all && \
+    git clone https://github.com/letsencrypt/letsencrypt && cd /letcencrypt && ./letsencrypt-auto
 
-COPY init/ /init/
+COPY hooks/ /hooks/
 COPY supervisord.d/ /etc/supervisord.d/
 COPY nginx.tmpl /
 COPY nginx.conf /etc/nginx/nginx.conf
