Updating inotify to work with k8

--- a/ns/Dockerfile
+++ b/ns/Dockerfile
@@ -1,8 +1,8 @@
-FROM xeor/base-alpine
+FROM xeor/base-alpine:0.2
 
 ENV REFRESHED_AT 2017-03-01
 
 RUN apk update \
-    && apk add dnsmasq inotify-tools
+    && apk add dnsmasq
 
 COPY root /
